--- a/apps/character/index.html
+++ b/apps/character/index.html
@@ -18,10 +18,10 @@ redirect_from:
     <div class="navigation-path">
         <script>document.write(`<a href="../?v=${APP_VERSION}" id="nav-home">홈</a>`);</script>
         <span class="separator">/</span>
-        <span class="current-page" id="nav-current">괴도</span>
+        <span class="current-page" id="nav-current">-</span> 
     </div>
     <div class="header-container">
-        <h1 id="page-title">괴도 육성</h1>
+        <h1 id="page-title">-</h1>
     </div>
     <!-- Filter section -->
     <div class="filter-section">
@@ -210,7 +210,7 @@ redirect_from:
         <div class="spoiler-toggle-container">
             <label class="spoiler-toggle-label">
                 <input type="checkbox" id="spoilerToggle" class="spoiler-toggle-checkbox">
-                <span class="spoiler-toggle-text" id="spoilerToggleText">스포일러 보기</span>
+                <span class="spoiler-toggle-text" id="spoilerToggleText">Show Spoilers</span>
             </label>
         </div>
     </div>
