--- a/apps/tactic/tactics.html
+++ b/apps/tactic/tactics.html
@@ -62,7 +62,7 @@ description: 페르소나5 더 팬텀 X 택틱들을 확인하세요.
                 <div class="spoiler-toggle-container" style="display:none;">
                     <label class="spoiler-toggle-label">
                         <input type="checkbox" id="spoilerToggle" class="spoiler-toggle-checkbox">
-                        <span class="spoiler-toggle-text" id="spoilerToggleText">스포일러 보기</span>
+                        <span class="spoiler-toggle-text" id="spoilerToggleText">Show Spoilers</span>
                     </label>
                 </div>
             </div>
