--- a/apps/tier/position-tier.html
+++ b/apps/tier/position-tier.html
@@ -751,7 +751,7 @@ description: P5X 랭커의 티어 리스트를 확인하세요.
         }
 
         // 언어별 라벨
-        label.textContent = getTierText('showSpoilers', '스포일러 보기');
+        label.textContent = getTierText('showSpoilers', 'Show Spoilers');
 
         // 기본 상태: 체크 해제 (현재 페이지 세션에서만 유지)
         container.style.display = 'flex';
