--- a/apps/critical-calc/index.html
+++ b/apps/critical-calc/index.html
@@ -15,12 +15,12 @@ description: 페르소나5 더 팬텀 X 크리티컬 확률 계산기
 <div class="main-wrapper">
     <!-- 네비게이션 경로 -->
     <div class="navigation-path">
-        <script>document.write(`<a href="../../?v=${APP_VERSION}" id="nav-home">홈</a>`);</script>
+        <script>document.write(`<a href="../../?v=${APP_VERSION}" id="nav-home">-</a>`);</script>
         <span class="separator">/</span>
-        <span class="current-page" id="navCurrent">크리티컬 확률 계산</span>
+        <span class="current-page" id="navCurrent">-</span>
     </div>
     <div class="header-container">
-        <h1 id="page-title">크리티컬 확률 계산기</h1>
+        <h1 id="page-title">-</h1>
         <label id="spoilerToggleWrap"
             style="display:flex; align-items:center; cursor:pointer; font-size:13px; opacity:0.85;">
             <input type="checkbox" id="showSpoilerToggle"> <span id="showSpoilerLabel"
