--- a/apps/defense-calc/index.html
+++ b/apps/defense-calc/index.html
@@ -37,12 +37,12 @@ redirect_from:
 <div class="main-wrapper">
     <!-- navigation path -->
     <div class="navigation-path">
-        <script>document.write(`<a href="../../?v=${APP_VERSION}" id="nav-home">홈</a>`);</script>
+        <script>document.write(`<a href="../../?v=${APP_VERSION}" id="nav-home">-</a>`);</script>
         <span class="separator">/</span>
-        <span class="current-page" id="nav-current">방어력 계산</span>
+        <span class="current-page" id="nav-current">-</span>
     </div>
     <div class="header-container">
-        <h1 id="page-title">방어력 감소 계산기</h1>
+        <h1 id="page-title">-</h1>
         <label id="spoilerToggleWrap"
             style="display:flex; align-items:center; cursor:pointer; font-size:13px; opacity:0.85;">
             <input type="checkbox" id="showSpoilerToggle"> <span id="showSpoilerLabel"
