--- a/apps/gallery/index.html
+++ b/apps/gallery/index.html
@@ -27,12 +27,12 @@ custom_data: ["/data/character_info.js"]
 <div class="main-wrapper">
   <div class="gallery-header">
     <div class="navigation-path">
-      <script>document.write(`<a href="${BASE_URL}/?v=${APP_VERSION}" id="nav-home" data-i18n="navHome">홈</a>`);</script>
+      <script>document.write(`<a href="${BASE_URL}/?v=${APP_VERSION}" id="nav-home" data-i18n="navHome">-</a>`);</script>
       <span class="separator">/</span>
-      <span class="current-page" id="nav-current" data-i18n="navCurrent">갤러리</span>
+      <span class="current-page" id="nav-current" data-i18n="navCurrent">-</span>
     </div>
     <div class="header-container">
-      <h1 id="gallery-title" data-i18n="pageTitle">갤러리</h1>
+      <h1 id="gallery-title" data-i18n="pageTitle">-</h1>
     </div>
     <!-- 
     <p id="gallery-desc" class="korean-content">썸네일을 클릭하면 원본 이미지를 모달로 확인할 수 있습니다.</p>
