--- a/apps/material-calc/index.html
+++ b/apps/material-calc/index.html
@@ -12,9 +12,9 @@ description: P5X 캐릭터 육성 재료 계산기 (레벨/무기/스킬/심상)
 
 <div class="main-wrapper">
     <div class="navigation-path">
-        <script>document.write(`<a href="${BASE_URL}/?v=${APP_VERSION}"><span data-lang-key="home">홈</span></a>`);</script>
+        <script>document.write(`<a href="${BASE_URL}/?v=${APP_VERSION}"><span data-lang-key="home">-</span></a>`);</script>
         <span class="separator">/</span>
-        <span class="current-page" data-lang-key="pageTitle">육성 계산기</span>
+        <span class="current-page" data-lang-key="pageTitle">-</span>
     </div>
 
     <div class="header-container">
