--- a/apps/tactic-maker/index.html
+++ b/apps/tactic-maker/index.html
@@ -32,13 +32,13 @@ jp: /tactic-maker/?lang=jp
     </div>
 
     <div class="navigation-path">
-        <script>document.write(`<a href="../../?v=${APP_VERSION}" data-i18n="home">홈</a>`);</script>
+        <script>document.write(`<a href="../../?v=${APP_VERSION}" data-i18n="home">-</a>`);</script>
         <span class="separator">/</span>
-        <span class="current-page" data-i18n="navPath">택틱 / 택틱 메이커</span>
+        <span class="current-page" data-i18n="navPath">-</span>
     </div>
 
     <div class="header-container">
-        <h1 data-i18n="pageTitle">택틱 메이커</h1>
+        <h1 data-i18n="pageTitle">-</h1>
     </div>
 
     <!-- Sheet Status Row -->
