--- a/apps/character/character.html
+++ b/apps/character/character.html
@@ -69,9 +69,9 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                         return fallback;
                     }
                 </script>
-                <a id="character-home-link" href="../../">홈</a>
+                <a id="character-home-link" href="../../">-</a>
                 <span class="separator">/</span>
-                <a id="character-list-link" href="/character/">괴도</a>
+                <a id="character-list-link" href="/character/">-</a>
                 <span class="separator">/</span>
                 <span class="current-page"></span>
             </div>
