--- a/apps/character/index.html
+++ b/apps/character/index.html
@@ -16,7 +16,7 @@ redirect_from:
     </div>-->
 
     <div class="navigation-path">
-        <script>document.write(`<a href="../?v=${APP_VERSION}" id="nav-home">홈</a>`);</script>
+        <script>document.write(`<a href="../?v=${APP_VERSION}" id="nav-home">-</a>`);</script>
         <span class="separator">/</span>
         <span class="current-page" id="nav-current">-</span> 
     </div>
