--- a/apps/guides/index.html
+++ b/apps/guides/index.html
@@ -18,13 +18,13 @@ image: /assets/img/home/seo.png
 <div class="main-wrapper">
     <!-- navigation path -->
     <div class="navigation-path">
-        <script>document.write(`<a href="/?v=${APP_VERSION}" id="nav-home" data-i18n="navHome">홈</a>`);</script>
+        <script>document.write(`<a href="/?v=${APP_VERSION}" id="nav-home" data-i18n="navHome">-</a>`);</script>
         <span class="separator">/</span>
-        <span class="current-page" id="nav-current" data-i18n="navCurrent">가이드</span>
+        <span class="current-page" id="nav-current" data-i18n="navCurrent">-</span>
     </div>
 
     <div class="header-container">
-        <h1 data-i18n="pageTitle">가이드</h1>
+        <h1 data-i18n="pageTitle">-</h1>
     </div>
 
     <!-- Guides List Container -->
