--- a/apps/persona/index.html
+++ b/apps/persona/index.html
@@ -36,7 +36,7 @@ jp: /persona/?lang=jp
     <script src="{{ site.baseurl }}/apps/persona/getfrom.js?v={{ site.time | date: '%s' }}"></script>
 
     <div class="navigation-path">
-        <script>document.write(`<a href="../../?v=${APP_VERSION}" id="nav-home" data-i18n="navHome">홈</a>`);</script>
+        <script>document.write(`<a href="../../?v=${APP_VERSION}" id="nav-home" data-i18n="navHome">-</a>`);</script>
         <span class="separator">/</span>
         <span class="current-page" id="nav-current" data-i18n="navCurrent">-</span>
     </div>
