--- a/apps/pull-calc/index.html
+++ b/apps/pull-calc/index.html
@@ -33,14 +33,14 @@ redirect_from:
 <div class="main-wrapper pull-calc-page">
     <!-- Navigation Path -->
     <div class="navigation-path">
-        <script>document.write(`<a href="../../?v=${APP_VERSION}" id="nav-home">홈</a>`);</script>
+        <script>document.write(`<a href="../../?v=${APP_VERSION}" id="nav-home">-</a>`);</script>
         <span class="separator">/</span>
-        <span class="current-page" id="nav-current">가챠 플래너</span>
+        <span class="current-page" id="nav-current">-</span>
     </div>
 
     <!-- Header -->
     <div class="header-container">
-        <h1 id="page-title">가챠 플래너</h1>
+        <h1 id="page-title">-</h1>
     </div>
 
     <!-- Must Read Accordion -->
