--- a/apps/revelations/index.html
+++ b/apps/revelations/index.html
@@ -31,12 +31,12 @@ jp: /revelations/?lang=jp
 
     <!-- Navigation path -->
     <div class="navigation-path">
-        <script>document.write(`<a href="../../?v=${APP_VERSION}" id="nav-home" data-i18n="nav_home">홈</a>`);</script>
+        <script>document.write(`<a href="../../?v=${APP_VERSION}" id="nav-home" data-i18n="nav_home">-</a>`);</script>
         <span class="separator">/</span>
-        <span class="current-page" id="nav-current" data-i18n="nav_current">계시</span>
+        <span class="current-page" id="nav-current" data-i18n="nav_current">-</span>
     </div>
     <div class="header-container">
-        <h1 id="page-title" data-i18n="page_title">계시</h1>
+        <h1 id="page-title" data-i18n="page_title">-</h1>
     </div>
 
     <!-- Filter section -->
