--- a/apps/schedule/index.html
+++ b/apps/schedule/index.html
@@ -31,14 +31,14 @@ kr: /schedule/?lang=kr
 <div class="main-wrapper schedule-page">
     <!-- Navigation path -->
     <div class="navigation-path">
-        <script>document.write(`<a href="../../?v=${APP_VERSION}" id="nav-home" data-i18n="navHome">Home</a>`);</script>
+        <script>document.write(`<a href="../../?v=${APP_VERSION}" id="nav-home" data-i18n="navHome">-</a>`);</script>
         <span class="separator">/</span>
-        <span class="current-page" id="nav-current" data-i18n="navCurrent">Schedule</span>
+        <span class="current-page" id="nav-current" data-i18n="navCurrent">-</span>
     </div>
 
     <!-- Header -->
     <div class="header-container">
-        <h1 id="page-title" data-i18n="pageTitle">Release Schedule</h1>
+        <h1 id="page-title" data-i18n="pageTitle">-</h1>
     </div>
 
     <!-- Notice Banner -->
