--- a/apps/synergy/index.html
+++ b/apps/synergy/index.html
@@ -33,12 +33,12 @@ jp: /synergy/?lang=jp
     <script defer src="{{ site.baseurl }}/i18n/service/i18n-adapter.js?v={{ site.time | date: '%s' }}"></script>
 
     <div class="navigation-path">
-        <script>document.write(`<a href="../../?v=${APP_VERSION}" id="nav-home" data-i18n="navHome">홈</a>`);</script>
+        <script>document.write(`<a href="../../?v=${APP_VERSION}" id="nav-home" data-i18n="navHome">-</a>`);</script>
         <span class="separator">/</span>
-        <span class="current-page" id="nav-current" data-i18n="navCurrent">협력자</span>
+        <span class="current-page" id="nav-current" data-i18n="navCurrent">-</span>
     </div>
     <div class="header-container">
-        <h1 id="page-title" data-i18n="pageTitle">협력자</h1>
+        <h1 id="page-title" data-i18n="pageTitle">-</h1>
     </div>
 
     <!-- Filter section -->
