--- a/apps/tier/position-tier.html
+++ b/apps/tier/position-tier.html
@@ -23,12 +23,12 @@ description: P5X 랭커의 티어 리스트를 확인하세요.
 
     <!-- Navigation path -->
     <div class="navigation-path">
-        <script>document.write(`<a href="{{ site.baseurl }}/?v=${APP_VERSION}" id="nav-home" data-i18n="navHome">홈</a>`);</script>
+        <script>document.write(`<a href="{{ site.baseurl }}/?v=${APP_VERSION}" id="nav-home" data-i18n="navHome">-</a>`);</script>
         <span class="separator">/</span>
-        <span class="current-page" id="nav-current" data-i18n="navCurrent">티어 메이커</span>
+        <span class="current-page" id="nav-current" data-i18n="navCurrent">-</span>
     </div>
     <div class="header-container">
-        <h1 id="page-title" data-i18n="pageTitle">티어 메이커</h1>
+        <h1 id="page-title" data-i18n="pageTitle">-</h1>
     </div>
 
     <!-- Filter section -->
