--- a/apps/wonder-weapon/index.html
+++ b/apps/wonder-weapon/index.html
@@ -29,13 +29,13 @@ jp: /wonder-weapon/?lang=jp
   </div>-->
 
   <div class="navigation-path">
-    <script>document.write(`<a href="../../?v=${APP_VERSION}" id="nav-home" data-i18n="navHome">홈</a>`);</script>
+    <script>document.write(`<a href="../../?v=${APP_VERSION}" id="nav-home" data-i18n="navHome">-</a>`);</script>
     <span class="separator">/</span>
-    <span class="current-page" id="nav-current" data-i18n="navCurrent">원더 무기</span>
+    <span class="current-page" id="nav-current" data-i18n="navCurrent">-</span>
   </div>
 
   <div class="header-container">
-    <h1 id="page-title" data-i18n="pageTitle">원더 무기</h1>
+    <h1 id="page-title" data-i18n="pageTitle">-</h1>
   </div>
 
   <!-- Filter section -->
