--- a/apps/synergy/index.html
+++ b/apps/synergy/index.html
@@ -10,86 +10,8 @@ language: kr
 title : 협력자 - 페르소나5 더 팬텀 X 루페르넷
 description: 페르소나5 더 팬텀 X의 협력자 정보
 alternate_urls:
-en: /synergy/?lang=en
-jp: /synergy/?lang=jp
+  ko: /synergy/
+  en: /en/synergy/
+  jp: /jp/synergy/
 ---
-
-{% if page.alternate_urls %}
-<link rel="alternate" hreflang="ko" href="{{ site.url }}/synergy/" />
-{% for lang in page.alternate_urls %}
-<link rel="alternate" hreflang="{{ lang[0] }}" href="{{ site.url }}{{ lang[1] }}" />
-{% endfor %}
-<link rel="alternate" hreflang="x-default" href="{{ site.url }}/synergy/" />
-{% endif %}
-
-<div class="main-wrapper">
-    <link rel="stylesheet" href="{{ site.baseurl }}/apps/synergy/synergy.css?v={{ site.time | date: '%s' }}">
-    <link rel="stylesheet" href="{{ site.baseurl }}/apps/synergy/soulmate.css?v={{ site.time | date: '%s' }}">
-    <script src="{{ site.baseurl }}/assets/js/ad-injector.js?v={{ site.time | date: '%s' }}"></script>
-    <script src="{{ site.baseurl }}/data/character_info.js?v={{ site.time | date: '%s' }}"></script>
-
-    <!-- i18n 서비스 -->
-    <script src="{{ site.baseurl }}/i18n/service/i18n-service.js?v={{ site.time | date: '%s' }}"></script>
-    <script defer src="{{ site.baseurl }}/i18n/service/i18n-adapter.js?v={{ site.time | date: '%s' }}"></script>
-
-    <div class="navigation-path">
-        <script>document.write(`<a href="../../?v=${APP_VERSION}" id="nav-home" data-i18n="navHome">-</a>`);</script>
-        <span class="separator">/</span>
-        <span class="current-page" id="nav-current" data-i18n="navCurrent">-</span>
-    </div>
-    <div class="header-container">
-        <h1 id="page-title" data-i18n="pageTitle">-</h1>
-    </div>
-
-    <!-- Filter section -->
-    <div class="filter-section">
-        <div class="filter-header">
-            <div class="time-filter">
-                <button class="time-filter-btn active" data-time="all" data-i18n="filterAll">전체</button>
-                <button class="time-filter-btn" data-time="After School" data-i18n="filterAfterSchool">방과 후</button>
-                <button class="time-filter-btn" data-time="Evening" data-i18n="filterEvening">저녁</button>
-                <button class="time-filter-btn" data-time="Night" data-i18n="filterNight">밤</button>
-            </div>
-            <div class="search-container">
-                <div class="search-icon">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M15.5 14H14.71L14.43 13.73C15.41 12.59 16 11.11 16 9.5C16 5.91 13.09 3 9.5 3C5.91 3 3 5.91 3 9.5C3 13.09 5.91 16 9.5 16C11.11 16 12.59 15.41 13.73 14.43L14 14.71V15.5L19 20.49L20.49 19L15.5 14ZM9.5 14C7.01 14 5 11.99 5 9.5C5 7.01 7.01 5 9.5 5C11.99 5 14 7.01 14 9.5C14 11.99 11.99 14 9.5 14Z"
-                            fill="rgba(255, 255, 255, 0.6)" />
-                    </svg>
-                </div>
-                <input type="text" id="characterSearch" data-i18n-placeholder="searchPlaceholder"
-                    placeholder="캐릭터 검색..." autocomplete="off">
-            </div>
-            <div class="spoiler-checkbox-container">
-                <label class="spoiler-checkbox-label">
-                    <input type="checkbox" id="showSpoiler" class="spoiler-checkbox">
-                    <span id="spoiler-label-text" data-i18n="labelShowSpoiler">Show Spoiler</span>
-                </label>
-            </div>
-        </div>
-    </div>
-
-    <!-- Separator line -->
-    <div class="separator-line"></div>
-
-    <!-- Tab section -->
-    <div class="synergy-container">
-        <div class="character-tabs" id="characterTabs">
-            <!-- 탭은 JavaScript로 동적 생성 -->
-        </div>
-
-        <!-- Detail section -->
-        <div class="character-detail" id="characterDetail">
-            <div class="detail-placeholder">
-                <div class="loading-spinner"></div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<script src="{{ site.baseurl }}/apps/synergy/synergy_search.js?v={{ site.time | date: '%s' }}"></script>
-<script src="{{ site.baseurl }}/apps/synergy/item_from.js?v={{ site.time | date: '%s' }}"></script>
-<script src="{{ site.baseurl }}/apps/synergy/synergy.js?v={{ site.time | date: '%s' }}"></script>
-<script src="{{ site.baseurl }}/apps/synergy/discount_tooltip.js?v={{ site.time | date: '%s' }}"></script>
-<script src="{{ site.baseurl }}/apps/synergy/soulmate.js?v={{ site.time | date: '%s' }}"></script>
+{% include synergy-body.html %}
