--- a/pages/synergy/en/ange.html
+++ b/pages/synergy/en/ange.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X Synergy guide Manaka Nagao | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X Manaka Nagao synergy guide"
+title: "P5X Synergy Manaka Nagao | Lufelnet"
+description: "Persona 5 The Phantom X Manaka Nagao synergy guide | Affinity, Choices, Gifts"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-ange.png"
 language: en
 permalink: /en/synergy/ange/
