--- a/pages/synergy/en/cattle.html
+++ b/pages/synergy/en/cattle.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X Synergy guide Lufel | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X Lufel synergy guide"
+title: "P5X Synergy Lufel | Lufelnet"
+description: "Persona 5 The Phantom X Lufel synergy guide | Affinity, Choices, Gifts"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-cattle.png"
 language: en
 permalink: /en/synergy/cattle/
