--- a/pages/synergy/en/musubi.html
+++ b/pages/synergy/en/musubi.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X Synergy guide Musubi | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X Musubi synergy guide"
+title: "P5X Synergy Musubi | Lufelnet"
+description: "Persona 5 The Phantom X Musubi synergy guide | Affinity, Choices, Gifts"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-yui.png"
 language: en
 permalink: /en/synergy/musubi/
