--- a/pages/synergy/en/pinky.html
+++ b/pages/synergy/en/pinky.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X Synergy guide Narumi | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X Narumi synergy guide"
+title: "P5X Synergy Narumi | Lufelnet"
+description: "Persona 5 The Phantom X Narumi synergy guide | Affinity, Choices, Gifts"
 image: "/assets/img/synergy/face/liben_normal_05_01_01.png"
 language: en
 permalink: /en/synergy/pinky/
