--- a/pages/synergy/en/puppet.html
+++ b/pages/synergy/en/puppet.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X Synergy guide Miyu Sahara | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X Miyu Sahara synergy guide"
+title: "P5X Synergy Miyu Sahara | Lufelnet"
+description: "Persona 5 The Phantom X Miyu Sahara synergy guide | Affinity, Choices, Gifts"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-puppet.png"
 language: en
 permalink: /en/synergy/puppet/
