--- a/pages/synergy/jp/musubi.html
+++ b/pages/synergy/jp/musubi.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X シナジーガイド むすび | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X むすび シナジーガイド"
+title: "P5X シナジーガイド むすび | Lufelnet"
+description: "Persona 5 The Phantom X むすび シナジーガイド | 好感度、選択肢、贈り物"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-yui.png"
 language: jp
 permalink: /jp/synergy/musubi/
