--- a/pages/synergy/en/berry.html
+++ b/pages/synergy/en/berry.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X Synergy guide Ichigo Shikano | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X Ichigo Shikano synergy guide"
+title: "P5X Synergy Ichigo Shikano | Lufelnet"
+description: "Persona 5 The Phantom X Ichigo Shikano synergy guide | Affinity, Choices, Gifts"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-berry.png"
 language: en
 permalink: /en/synergy/berry/
