--- a/pages/synergy/en/blitz.html
+++ b/pages/synergy/en/blitz.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X Synergy guide Kumi Katayama | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X Kumi Katayama synergy guide"
+title: "P5X Synergy Kumi Katayama | Lufelnet"
+description: "Persona 5 The Phantom X Kumi Katayama synergy guide | Affinity, Choices, Gifts"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-blitz.png"
 language: en
 permalink: /en/synergy/blitz/
