--- a/pages/synergy/en/chord.html
+++ b/pages/synergy/en/chord.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X Synergy guide Ayaka Sakai | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X Ayaka Sakai synergy guide"
+title: "P5X Synergy Ayaka Sakai | Lufelnet"
+description: "Persona 5 The Phantom X Ayaka Sakai synergy guide | Affinity, Choices, Gifts"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-chord.png"
 language: en
 permalink: /en/synergy/chord/
