--- a/pages/synergy/en/closer.html
+++ b/pages/synergy/en/closer.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X Synergy guide Motoha Arai | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X Motoha Arai synergy guide"
+title: "P5X Synergy Motoha Arai | Lufelnet"
+description: "Persona 5 The Phantom X Motoha Arai synergy guide | Affinity, Choices, Gifts"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-closer.png"
 language: en
 permalink: /en/synergy/closer/
