--- a/pages/synergy/en/howler.html
+++ b/pages/synergy/en/howler.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X Synergy guide Runa Dogenzaka | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X Runa Dogenzaka synergy guide"
+title: "P5X Synergy Runa Dogenzaka | Lufelnet"
+description: "Persona 5 The Phantom X Runa Dogenzaka synergy guide | Affinity, Choices, Gifts"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-howler.png"
 language: en
 permalink: /en/synergy/howler/
