--- a/pages/synergy/en/key.html
+++ b/pages/synergy/en/key.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X Synergy guide Kiyoshi Kurotani | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X Kiyoshi Kurotani synergy guide"
+title: "P5X Synergy Kiyoshi Kurotani | Lufelnet"
+description: "Persona 5 The Phantom X Kiyoshi Kurotani synergy guide | Affinity, Choices, Gifts"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-kii.png"
 language: en
 permalink: /en/synergy/key/
