--- a/pages/synergy/en/luce.html
+++ b/pages/synergy/en/luce.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X Synergy guide Shoki Ikenami | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X Shoki Ikenami synergy guide"
+title: "P5X Synergy Shoki Ikenami | Lufelnet"
+description: "Persona 5 The Phantom X Shoki Ikenami synergy guide | Affinity, Choices, Gifts"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-luce.png"
 language: en
 permalink: /en/synergy/luce/
