--- a/pages/synergy/en/marian.html
+++ b/pages/synergy/en/marian.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X Synergy guide Minami Miyashita | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X Minami Miyashita synergy guide"
+title: "P5X Synergy Minami Miyashita | Lufelnet"
+description: "Persona 5 The Phantom X Minami Miyashita synergy guide | Affinity, Choices, Gifts"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-marian.png"
 language: en
 permalink: /en/synergy/marian/
