--- a/pages/synergy/en/matoi.html
+++ b/pages/synergy/en/matoi.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X Synergy guide Mio Natsukawa | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X Mio Natsukawa synergy guide"
+title: "P5X Synergy Mio Natsukawa | Lufelnet"
+description: "Persona 5 The Phantom X Mio Natsukawa synergy guide | Affinity, Choices, Gifts"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-matoi.png"
 language: en
 permalink: /en/synergy/matoi/
