--- a/pages/synergy/en/merope.html
+++ b/pages/synergy/en/merope.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X Synergy guide Merope | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X Merope synergy guide"
+title: "P5X Synergy Merope | Lufelnet"
+description: "Persona 5 The Phantom X Merope synergy guide | Affinity, Choices, Gifts"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-meiluopu.png"
 language: en
 permalink: /en/synergy/merope/
