--- a/pages/synergy/en/messa.html
+++ b/pages/synergy/en/messa.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X Synergy guide Kira Kitazato | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X Kira Kitazato synergy guide"
+title: "P5X Synergy Kira Kitazato | Lufelnet"
+description: "Persona 5 The Phantom X Kira Kitazato synergy guide | Affinity, Choices, Gifts"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-doctor.png"
 language: en
 permalink: /en/synergy/messa/
