--- a/pages/synergy/en/moko.html
+++ b/pages/synergy/en/moko.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X Synergy guide Tomoko Noge | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X Tomoko Noge synergy guide"
+title: "P5X Synergy Tomoko Noge | Lufelnet"
+description: "Persona 5 The Phantom X Tomoko Noge synergy guide | Affinity, Choices, Gifts"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-kotomo.png"
 language: en
 permalink: /en/synergy/moko/
