--- a/pages/synergy/en/mont.html
+++ b/pages/synergy/en/mont.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X Synergy guide Montagne Kotone | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X Montagne Kotone synergy guide"
+title: "P5X Synergy Montagne Kotone | Lufelnet"
+description: "Persona 5 The Phantom X Montagne Kotone synergy guide | Affinity, Choices, Gifts"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-mont.png"
 language: en
 permalink: /en/synergy/mont/
