--- a/pages/synergy/en/phoebe.html
+++ b/pages/synergy/en/phoebe.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X Synergy guide Yumi Shiina | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X Yumi Shiina synergy guide"
+title: "P5X Synergy Yumi Shiina | Lufelnet"
+description: "Persona 5 The Phantom X Yumi Shiina synergy guide | Affinity, Choices, Gifts"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-phoebe.png"
 language: en
 permalink: /en/synergy/phoebe/
