--- a/pages/synergy/en/rin.html
+++ b/pages/synergy/en/rin.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X Synergy guide Yaoling Li | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X Yaoling Li synergy guide"
+title: "P5X Synergy Yaoling Li | Lufelnet"
+description: "Persona 5 The Phantom X Yaoling Li synergy guide | Affinity, Choices, Gifts"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-rin.png"
 language: en
 permalink: /en/synergy/rin/
