--- a/pages/synergy/en/soy.html
+++ b/pages/synergy/en/soy.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X Synergy guide Shun Kano | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X Shun Kano synergy guide"
+title: "P5X Synergy Shun Kano | Lufelnet"
+description: "Persona 5 The Phantom X Shun Kano synergy guide | Affinity, Choices, Gifts"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-soy.png"
 language: en
 permalink: /en/synergy/soy/
