--- a/pages/synergy/en/turbo.html
+++ b/pages/synergy/en/turbo.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X Synergy guide Mayumi Hashimoto | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X Mayumi Hashimoto synergy guide"
+title: "P5X Synergy Mayumi Hashimoto | Lufelnet"
+description: "Persona 5 The Phantom X Mayumi Hashimoto synergy guide | Affinity, Choices, Gifts"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-turbo.png"
 language: en
 permalink: /en/synergy/turbo/
