--- a/pages/synergy/en/wind.html
+++ b/pages/synergy/en/wind.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X Synergy guide Riko Tanemura | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X Riko Tanemura synergy guide"
+title: "P5X Synergy Riko Tanemura | Lufelnet"
+description: "Persona 5 The Phantom X Riko Tanemura synergy guide | Affinity, Choices, Gifts"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-wind.png"
 language: en
 permalink: /en/synergy/wind/
