--- a/pages/synergy/jp/ange.html
+++ b/pages/synergy/jp/ange.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X シナジーガイド 長尾 愛歌 | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X 長尾 愛歌 シナジーガイド"
+title: "P5X シナジーガイド 長尾 愛歌 | Lufelnet"
+description: "Persona 5 The Phantom X 長尾 愛歌 シナジーガイド | 好感度、選択肢、贈り物"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-ange.png"
 language: jp
 permalink: /jp/synergy/ange/
