--- a/pages/synergy/jp/berry.html
+++ b/pages/synergy/jp/berry.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X シナジーガイド 鹿野 莓 | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X 鹿野 莓 シナジーガイド"
+title: "P5X シナジーガイド 鹿野 莓 | Lufelnet"
+description: "Persona 5 The Phantom X 鹿野 莓 シナジーガイド | 好感度、選択肢、贈り物"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-berry.png"
 language: jp
 permalink: /jp/synergy/berry/
