--- a/pages/synergy/jp/blitz.html
+++ b/pages/synergy/jp/blitz.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X シナジーガイド 片山 久未 | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X 片山 久未 シナジーガイド"
+title: "P5X シナジーガイド 片山 久未 | Lufelnet"
+description: "Persona 5 The Phantom X 片山 久未 シナジーガイド | 好感度、選択肢、贈り物"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-blitz.png"
 language: jp
 permalink: /jp/synergy/blitz/
