--- a/pages/synergy/jp/bui.html
+++ b/pages/synergy/jp/bui.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X シナジーガイド YUI | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X YUI シナジーガイド"
+title: "P5X シナジーガイド YUI | Lufelnet"
+description: "Persona 5 The Phantom X YUI シナジーガイド | 好感度、選択肢、贈り物"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-bui.png"
 language: jp
 permalink: /jp/synergy/bui/
