--- a/pages/synergy/jp/chord.html
+++ b/pages/synergy/jp/chord.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X シナジーガイド 坂井 綾香 | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X 坂井 綾香 シナジーガイド"
+title: "P5X シナジーガイド 坂井 綾香 | Lufelnet"
+description: "Persona 5 The Phantom X 坂井 綾香 シナジーガイド | 好感度、選択肢、贈り物"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-chord.png"
 language: jp
 permalink: /jp/synergy/chord/
