--- a/pages/synergy/jp/key.html
+++ b/pages/synergy/jp/key.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X シナジーガイド 黒谷 清 | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X 黒谷 清 シナジーガイド"
+title: "P5X シナジーガイド 黒谷 清 | Lufelnet"
+description: "Persona 5 The Phantom X 黒谷 清 シナジーガイド | 好感度、選択肢、贈り物"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-kii.png"
 language: jp
 permalink: /jp/synergy/key/
