--- a/pages/synergy/jp/luce.html
+++ b/pages/synergy/jp/luce.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X シナジーガイド 池波 星輝 | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X 池波 星輝 シナジーガイド"
+title: "P5X シナジーガイド 池波 星輝 | Lufelnet"
+description: "Persona 5 The Phantom X 池波 星輝 シナジーガイド | 好感度、選択肢、贈り物"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-luce.png"
 language: jp
 permalink: /jp/synergy/luce/
