--- a/pages/synergy/jp/matoi.html
+++ b/pages/synergy/jp/matoi.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X シナジーガイド 夏川 澪 | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X 夏川 澪 シナジーガイド"
+title: "P5X シナジーガイド 夏川 澪 | Lufelnet"
+description: "Persona 5 The Phantom X 夏川 澪 シナジーガイド | 好感度、選択肢、贈り物"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-matoi.png"
 language: jp
 permalink: /jp/synergy/matoi/
