--- a/pages/synergy/jp/merope.html
+++ b/pages/synergy/jp/merope.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X シナジーガイド メロペ | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X メロペ シナジーガイド"
+title: "P5X シナジーガイド メロペ | Lufelnet"
+description: "Persona 5 The Phantom X メロペ シナジーガイド | 好感度、選択肢、贈り物"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-meiluopu.png"
 language: jp
 permalink: /jp/synergy/merope/
