--- a/pages/synergy/jp/messa.html
+++ b/pages/synergy/jp/messa.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X シナジーガイド 北里 基良 | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X 北里 基良 シナジーガイド"
+title: "P5X シナジーガイド 北里 基良 | Lufelnet"
+description: "Persona 5 The Phantom X 北里 基良 シナジーガイド | 好感度、選択肢、贈り物"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-doctor.png"
 language: jp
 permalink: /jp/synergy/messa/
