--- a/pages/synergy/jp/moko.html
+++ b/pages/synergy/jp/moko.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X シナジーガイド 野毛 朋子 | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X 野毛 朋子 シナジーガイド"
+title: "P5X シナジーガイド 野毛 朋子 | Lufelnet"
+description: "Persona 5 The Phantom X 野毛 朋子 シナジーガイド | 好感度、選択肢、贈り物"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-kotomo.png"
 language: jp
 permalink: /jp/synergy/moko/
