--- a/pages/synergy/jp/mont.html
+++ b/pages/synergy/jp/mont.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X シナジーガイド 琴音・モンターニュ | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X 琴音・モンターニュ シナジーガイド"
+title: "P5X シナジーガイド 琴音・モンターニュ | Lufelnet"
+description: "Persona 5 The Phantom X 琴音・モンターニュ シナジーガイド | 好感度、選択肢、贈り物"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-mont.png"
 language: jp
 permalink: /jp/synergy/mont/
