--- a/pages/synergy/jp/okyann.html
+++ b/pages/synergy/jp/okyann.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X シナジーガイド 富山 佳代 | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X 富山 佳代 シナジーガイド"
+title: "P5X シナジーガイド 富山 佳代 | Lufelnet"
+description: "Persona 5 The Phantom X 富山 佳代 シナジーガイド | 好感度、選択肢、贈り物"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-okyann.png"
 language: jp
 permalink: /jp/synergy/okyann/
