--- a/pages/synergy/jp/phoebe.html
+++ b/pages/synergy/jp/phoebe.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X シナジーガイド 椎名 悠美 | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X 椎名 悠美 シナジーガイド"
+title: "P5X シナジーガイド 椎名 悠美 | Lufelnet"
+description: "Persona 5 The Phantom X 椎名 悠美 シナジーガイド | 好感度、選択肢、贈り物"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-phoebe.png"
 language: jp
 permalink: /jp/synergy/phoebe/
