--- a/pages/synergy/jp/puppet.html
+++ b/pages/synergy/jp/puppet.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X シナジーガイド 佐原 海夕 | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X 佐原 海夕 シナジーガイド"
+title: "P5X シナジーガイド 佐原 海夕 | Lufelnet"
+description: "Persona 5 The Phantom X 佐原 海夕 シナジーガイド | 好感度、選択肢、贈り物"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-puppet.png"
 language: jp
 permalink: /jp/synergy/puppet/
