--- a/pages/synergy/jp/soy.html
+++ b/pages/synergy/jp/soy.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X シナジーガイド 加納 駿 | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X 加納 駿 シナジーガイド"
+title: "P5X シナジーガイド 加納 駿 | Lufelnet"
+description: "Persona 5 The Phantom X 加納 駿 シナジーガイド | 好感度、選択肢、贈り物"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-soy.png"
 language: jp
 permalink: /jp/synergy/soy/
