--- a/pages/synergy/jp/turbo.html
+++ b/pages/synergy/jp/turbo.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X シナジーガイド 橋本 麻由美 | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X 橋本 麻由美 シナジーガイド"
+title: "P5X シナジーガイド 橋本 麻由美 | Lufelnet"
+description: "Persona 5 The Phantom X 橋本 麻由美 シナジーガイド | 好感度、選択肢、贈り物"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-turbo.png"
 language: jp
 permalink: /jp/synergy/turbo/
