--- a/pages/synergy/jp/wind.html
+++ b/pages/synergy/jp/wind.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X シナジーガイド 多祢村 理子 | Persona 5 The Phantom X Lufelnet"
-description: "Persona 5 The Phantom X 多祢村 理子 シナジーガイド"
+title: "P5X シナジーガイド 多祢村 理子 | Lufelnet"
+description: "Persona 5 The Phantom X 多祢村 理子 シナジーガイド | 好感度、選択肢、贈り物"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-wind.png"
 language: jp
 permalink: /jp/synergy/wind/
