--- a/pages/synergy/kr/cherish.html
+++ b/pages/synergy/kr/cherish.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X 협력자 가이드 마사키 | 페르소나5 더 팬텀 X 루페르넷"
-description: "페르소나5 더 팬텀 X 마사키의 협력자(시너지) 가이드"
+title: "P5X 협력자 마사키 | 루페르넷"
+description: "페르소나5 더 팬텀 X 마사키의 협력자(시너지) 가이드 | 호감도, 선택지, 선물"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-cherish.png"
 language: kr
 permalink: /synergy/cherish/
