--- a/pages/synergy/kr/closer.html
+++ b/pages/synergy/kr/closer.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X 협력자 가이드 모토하 | 페르소나5 더 팬텀 X 루페르넷"
-description: "페르소나5 더 팬텀 X 모토하의 협력자(시너지) 가이드"
+title: "P5X 협력자 모토하 | 루페르넷"
+description: "페르소나5 더 팬텀 X 모토하의 협력자(시너지) 가이드 | 호감도, 선택지, 선물"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-closer.png"
 language: kr
 permalink: /synergy/closer/
