--- a/pages/synergy/kr/matoi.html
+++ b/pages/synergy/kr/matoi.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X 협력자 가이드 미오 | 페르소나5 더 팬텀 X 루페르넷"
-description: "페르소나5 더 팬텀 X 미오의 협력자(시너지) 가이드"
+title: "P5X 협력자 미오 | 루페르넷"
+description: "페르소나5 더 팬텀 X 미오의 협력자(시너지) 가이드 | 호감도, 선택지, 선물"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-matoi.png"
 language: kr
 permalink: /synergy/matoi/
