--- a/pages/synergy/kr/moko.html
+++ b/pages/synergy/kr/moko.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X 협력자 가이드 토모코 | 페르소나5 더 팬텀 X 루페르넷"
-description: "페르소나5 더 팬텀 X 토모코의 협력자(시너지) 가이드"
+title: "P5X 협력자 토모코 | 루페르넷"
+description: "페르소나5 더 팬텀 X 토모코의 협력자(시너지) 가이드 | 호감도, 선택지, 선물"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-kotomo.png"
 language: kr
 permalink: /synergy/moko/
