--- a/pages/synergy/kr/phoebe.html
+++ b/pages/synergy/kr/phoebe.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X 협력자 가이드 유우미 | 페르소나5 더 팬텀 X 루페르넷"
-description: "페르소나5 더 팬텀 X 유우미의 협력자(시너지) 가이드"
+title: "P5X 협력자 유우미 | 루페르넷"
+description: "페르소나5 더 팬텀 X 유우미의 협력자(시너지) 가이드 | 호감도, 선택지, 선물"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-phoebe.png"
 language: kr
 permalink: /synergy/phoebe/
