--- a/pages/synergy/kr/pinky.html
+++ b/pages/synergy/kr/pinky.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X 협력자 가이드 나루미 | 페르소나5 더 팬텀 X 루페르넷"
-description: "페르소나5 더 팬텀 X 나루미의 협력자(시너지) 가이드"
+title: "P5X 협력자 나루미 | 루페르넷"
+description: "페르소나5 더 팬텀 X 나루미의 협력자(시너지) 가이드 | 호감도, 선택지, 선물"
 image: "/assets/img/synergy/face/liben_normal_05_01_01.png"
 language: kr
 permalink: /synergy/pinky/
