--- a/pages/synergy/kr/rin.html
+++ b/pages/synergy/kr/rin.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: "P5X 협력자 가이드 야오링 | 페르소나5 더 팬텀 X 루페르넷"
-description: "페르소나5 더 팬텀 X 야오링의 협력자(시너지) 가이드"
+title: "P5X 협력자 야오링 | 루페르넷"
+description: "페르소나5 더 팬텀 X 야오링의 협력자(시너지) 가이드 | 호감도, 선택지, 선물"
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-rin.png"
 language: kr
 permalink: /synergy/rin/
