--- a/pages/synergy/kr/soy.html
+++ b/pages/synergy/kr/soy.html
@@ -5,6 +5,9 @@ description: "페르소나5 더 팬텀 X 슌의 협력자(시너지) 가이드 |
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-soy.png"
 language: kr
 permalink: /synergy/soy/
+redirect_from:
+  - /kr/synergy/soy/
+  - /kr/synergy/soy/index.html
 synergy_character: soy
 alternate_urls:
   ko: /synergy/soy/
