--- a/pages/synergy/kr/bui.html
+++ b/pages/synergy/kr/bui.html
@@ -5,6 +5,9 @@ description: "페르소나5 더 팬텀 X YUI의 협력자(시너지) 가이드 |
 image: "/assets/img/synergy/face/Tongyong-touxiang-changfu-bui.png"
 language: kr
 permalink: /synergy/bui/
+redirect_from:
+  - /kr/synergy/bui/
+  - /kr/synergy/bui/index.html
 synergy_character: bui
 alternate_urls:
   ko: /synergy/bui/
